fix: overflowx hidden

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,8 @@ body {
     -khtml-user-select: none; /* Konqueror HTML */
     -moz-user-select: none; /* Old versions of Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /*
+    user-select: none; 
+    overflow-x: hidden !important;/*
     /* background-color: #00d5ff !important; */
 }
 
